<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Name of the package of basic screensavers, shown in Settings > Apps. [CHAR LIMIT=40] -->
    <string name="app_name">Back Car</string>
    <string name="osdTextColor">ffffff</string>

    <!-- no this pageID -->
    <string name="noPageID">No such page!!</string>

    <string name="aux_checking">checking</string>
    <string name="back">Back</string>
    <!-- back car -->
    <string name="back_video_warning">Please check around for your safety</string>
    <string name="back_no_sign">Reversing video is not found</string>
    <string name="back_call_text">Incoming...</string>
	<string name="aux_no_sign_detected">Please check the connection</string>
 	<string name="backcar_alarm">Please be careful</string>
 	<string name="zero">000</string>
    <string name="contrast">contrast</string>
    <string name="brightness">brightness</string>
    <string name="hue">hue</string>
    <string name="staturation">staturation</string>
    <string name="reSet">reSet</string>

 	<string name="vdoBri">vdoBri</string>
 	<string name="vdoHue">vdoHue</string>
 	<string name="vdoSta">vdoSta</string>
 	<string name="scrHue">scrHue</string>
 	<string name="scrBri">scrBri</string>
 	<string name="scrCon">scrCon</string>
 	<string name="scrSta">scrSta</string>

 	 <string name="Reset">ReSet</string>
 	 <string name="Save">Save</string>
 	 <string name="pre">pre</string>
 	 <string name="next">next</string>
 	 
</resources>
